Made panaltyRoutes error out when user not found
